[gd_scene load_steps=2 format=2]

[ext_resource path="res://2DPlatformerController.gd" type="Script" id=1]

[node name="2DPlatformerController" type="Node2D"]
script = ExtResource( 1 )

[node name="NextPointCast" type="RayCast2D" parent="."]
enabled = true

[node name="GapCast" type="RayCast2D" parent="."]
enabled = true

[node name="JumpCasts" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="JumpCasts"]
enabled = true

[node name="Right" type="RayCast2D" parent="JumpCasts"]
enabled = true
